--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "hack money app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,29 @@
   "bugs": {
     "url": "https://github.com/codenamejason/hackmoney/issues"
   },
-  "homepage": "https://github.com/codenamejason/hackmoney#readme"
+  "homepage": "https://github.com/codenamejason/hackmoney#readme",
+  "dependencies": {
+    "@blueprintjs/core": "^3.26.0",
+    "@blueprintjs/labs": "^0.16.3",
+    "axios": "^0.18.0",
+    "d3-format": "^1.2.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.23.0",
+    "netlify-cli": "^2.48.0",
+    "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-csv": "^1.0.19",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.1",
+    "react-table": "^6.7.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^4.0.0",
+    "web3": "^1.0.0-beta.36"
+  },
+  "devDependencies": {},
+  "badges": []
 }
