work on form for product

--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,10 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
-    "babel-register": "6.26.0",    
+    "babel-register": "6.26.0",
+    "bnc-notify": "1.1.2",
+    "bnc-onboard": "1.7.7",
+    "bnc-assist": "0.10.3",  
     "bootstrap": "4.3.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
