--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bnc-onboard": "^1.7.8",
+    "chalk": "^4.0.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
