--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
     "truffle-hdwallet-provider": "1.0.6"
   },
   "scripts": {
