--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@uniswap/v2-core": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bnc-notify": "^1.2.0",
