--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -7,10 +7,12 @@
 
 # testing
 /coverage
+/test
 
 # production
 /build
 /contracts
+/migrations
 
 
 # misc
@@ -24,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.solhint.json
+
