--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chainlink/contracts": "0.0.4",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@openzeppelin/contracts": "^3.0.1",
@@ -10,14 +11,14 @@
     "@studydefi/money-legos": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",    
+    "@testing-library/user-event": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bnc-notify": "^1.2.0",
     "bnc-onboard": "^1.7.8",
     "chalk": "^4.0.0",
-    "erc777": "^0.1.1",
     "erc1820": "0.0.2",
+    "erc777": "^0.1.1",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,7 +31,8 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "rm -rf node_modules/erc1820/node_modules_websocket/.git"
   },
   "eslintConfig": {
     "extends": "react-app"
