--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Income Stream",
+  "name": "income-stream",
   "icons": [
     {
       "src": "favicon.ico",
