--- a/front-end/config.yml
+++ b/front-end/config.yml
@@ -1,11 +1,45 @@
-version: 2.1
+# Orb 'circleci/node@1.1.6' resolved to 'circleci/node@1.1.6'
+version: 2
 jobs:
-  build:
+  build-and-test:
     docker:
-      - image: alpine:3.7
+    - image: circleci/node:latest
     steps:
-      - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+    - checkout
+    - restore_cache:
+        keys:
+        - node-deps-v1-{{ .Branch }}-{{ checksum "package.json" }}
+        - node-deps-v1-{{ .Branch }}
+        - node-deps-v1
+    - run:
+        command: npm install
+    - run:
+        command: npm test
+    - save_cache:
+        key: node-deps-v1-{{ .Branch }}-{{ checksum "package.json" }}
+        paths:
+        - ~/project/node_modules
+workflows:
+  build-and-test:
+    jobs:
+    - build-and-test
+  version: 2
+
+# Original config.yml file:
+# version: 2.1
+# orbs:
+#   node: circleci/node@1.1.6
+# jobs:
+#   build-and-test:
+#     executor:
+#       name: node/default
+#     steps:
+#       - checkout
+#       - node/with-cache:
+#           steps:
+#             - run: npm install
+#             - run: npm test
+# workflows:
+#     build-and-test:
+#       jobs:
+#         - build-and-test
