--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@portis/web3": "^2.0.0-beta.55",
     "@studydefi/money-legos": "^2.1.0",
     "bnc-notify": "^1.2.0",
     "bnc-onboard": "^1.7.8",
@@ -14,7 +15,7 @@
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
     "truffle-hdwallet-provider": "1.0.6",
-    "web3": "^1.2.7"
+    "web3": "^1.2.8"
   },
   "decDependencies": {
     "@openzeppelin/contracts": "^3.0.1",
