--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@portis/web3": "^2.0.0-beta.55",
     "@studydefi/money-legos": "^2.1.0",
+    "babel-polyfill": "^6.26.0",
     "bnc-notify": "^1.2.0",
     "bnc-onboard": "^1.7.8",
     "moment": "^2.25.3",
