--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "@portis/web3": "^2.0.0-beta.55",
     "@studydefi/money-legos": "^2.1.0",
     "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "bnc-notify": "^1.2.0",
     "bnc-onboard": "^1.7.8",
     "moment": "^2.25.3",
@@ -19,7 +20,7 @@
     "truffle-hdwallet-provider": "1.0.6",
     "web3": "^1.2.8"
   },
-  "decDependencies": {
+  "devDependencies": {
     "@openzeppelin/contracts": "^3.0.1",
     "@openzeppelin/test-helpers": "^0.5.5",
     "@studydefi/money-legos": "^2.1.0",
@@ -27,7 +28,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
