--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,9 +6,11 @@
     "@chainlink/contracts": "0.0.4",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "@opengsn/gsn": "0.9.0",
+    "@opengsn/gsn": "^0.10.0",
     "@portis/web3": "^2.0.0-beta.55",
     "@studydefi/money-legos": "^2.1.0",
+    "@uniswap/sdk": "^1.0.0-beta.4",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bnc-notify": "^1.2.0",
@@ -31,6 +33,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
+    "identicon": "^3.0.1",
+    "identicon.js": "^2.3.3",
     "ethereumjs-tx": "^2.1.2",
     "ethereum-waffle": "2.5.1"
   },
