--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,7 +40,7 @@
     "chai": "^4.2.0",
     "identicon": "^3.0.1",
     "identicon.js": "^2.3.3",
-    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-tx": "1.3.7",
     "ethereum-waffle": "2.5.1"
   },
   "scripts": {
