--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "babel-register": "^6.26.0",
     "bnc-notify": "^1.2.0",
     "bnc-onboard": "^1.7.8",
+    "dotenv": "^8.2.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -31,24 +32,24 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^3.0.1",
     "@openzeppelin/test-helpers": "^0.5.5",
-    "@studydefi/money-legos": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "identicon": "^3.0.1",
-    "identicon.js": "^2.3.3",
+    "cross-env": "^7.0.2",
+    "ethereum-waffle": "2.5.1",
     "ethereumjs-tx": "1.3.7",
-    "ethereum-waffle": "2.5.1"
+    "identicon": "^3.0.1",
+    "identicon.js": "^2.3.3"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "start": "react-scripts --max_old_space_size=8192 start",
+    "build": "react-scripts --max_old_space_size=8192 build",
+    "build-env": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "rm -rf node_modules/erc1820/node_modules_websocket/.git"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
