--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,7 +42,8 @@
     "ethereum-waffle": "2.5.1",
     "ethereumjs-tx": "1.3.7",
     "identicon": "^3.0.1",
-    "identicon.js": "^2.3.3"
+    "identicon.js": "^2.3.3",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
