--- a/front-end/netlify.toml
+++ b/front-end/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-    command = "CI= --max_old_space_size=8192 react-scripts build"
+    command = "CI= react-scripts --max_old_space_size=8192  build"
     publish = "build"
 
