--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@chainlink/contracts": "0.0.4",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@maticnetwork/maticjs": "^2.0.1",
     "@opengsn/gsn": "^0.10.0",
     "@portis/web3": "^2.0.0-beta.55",
     "@studydefi/money-legos": "^2.1.0",
