--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "@chainlink/contracts": "^0.0.3",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@openzeppelin/contracts": "^3.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,9 +16,9 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
+    "bnc-assist": "0.10.3",
     "bnc-notify": "1.1.2",
     "bnc-onboard": "1.7.7",
-    "bnc-assist": "0.10.3",  
     "bootstrap": "4.3.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
